...

        if (emailErrorResult != null || userNameErrorResult != null || !passValid || !passMatch) {
            _state.update {
                it.copy(
                    userNameError = userNameErrorResult,
                    emailError = emailErrorResult,
                    errorMsg = "Please check the required fields") }
            return
        }

        //Tries to register a user
        viewModelScope.launch {
            _state.update { it.copy(isSubmitting = true, errorMsg = null, emailError = null, userNameError = null) }
...
